--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.4.1
 Django==3.2.7
 django-cors-headers==3.8.0
-django-rest-framework==0.1.0
+django-rest-passwordreset==1.2.0
 djangorestframework==3.12.4
-Pillow==8.3.2
-psycopg2
-mysqlclient
+psycopg2==2.9.1
 pytz==2021.1
-sqlparse==0.4.1
+sqlparse==0.4.2
+typing-extensions==3.10.0.2
+whitenoise
+gunicorn
+django-heroku
+python-dotenv
