--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 asgiref==3.4.1
+dj-database-url==0.5.0
 Django==3.2.7
+django-adminlte3==0.1.6
 django-cors-headers==3.8.0
+django-crispy-forms==1.12.0
+django-heroku==0.3.1
 django-rest-passwordreset==1.2.0
 djangorestframework==3.12.4
+gunicorn==20.1.0
+Pillow==8.3.2
 psycopg2==2.9.1
+python-dotenv==0.19.0
 pytz==2021.1
 sqlparse==0.4.2
 typing-extensions==3.10.0.2
-whitenoise
-gunicorn
-django-heroku
-python-dotenv
+whitenoise==5.3.0
