--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ django-rest-passwordreset==1.2.0
 djangorestframework==3.12.4
 gunicorn==20.1.0
 Pillow==8.3.2
-psycopg2==2.9.1
-python-dotenv==0.19.0
+psycopg2
+psycopg2-binaries
+python-dotenv
 pytz==2021.1
 sqlparse==0.4.2
 typing-extensions==3.10.0.2
